Style scrollbar and fix measurement width

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,19 @@
 body {
   font-family: 'Noto Sans JP', sans-serif;
 }
+
+::-webkit-scrollbar {
+  width: 2px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
